ADD_SUBDIRECTORY(export_for_fab)
ADD_SUBDIRECTORY(fit_patches)
ADD_SUBDIRECTORY(generate_training_data)
ADD_SUBDIRECTORY(merge_patches)
ADD_SUBDIRECTORY(morph_grid)
ADD_SUBDIRECTORY(patches_from_edges)
ADD_SUBDIRECTORY(patches_from_segmentation)
ADD_SUBDIRECTORY(render_grid)
ADD_SUBDIRECTORY(render_saliency_map)
ADD_SUBDIRECTORY(render_segmentation_target)
ADD_SUBDIRECTORY(render_target)
